--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Interactive Recipe Finder</title>
+  <title>PranaYum-Recipe Finder</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <header class="topbar">
-    <div class="logo"><img src="/assets/images/logo.png" alt=""> Interactive Recipe Finder</div>
+    <div class="logo"><img src="/assets/images/logo.png" alt=""><b>PranaYum </b></div>
     <form id="searchForm" class="search-form">
       <input type="text" id="searchInput" placeholder="Enter ingredients e.g. tomato, cheese">
       <button type="submit">Search</button>
